--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "build": "node index.js"
+    "start": "nodemon api/index.js",
+    "build": "node api/index.js"
   },
   "keywords": [],
   "author": "",
